--- a/project/build.gradle
+++ b/project/build.gradle
@@ -249,4 +249,11 @@ android.applicationVariants.all { variant ->
     variant.resValue "string", "authority_autocomplete_airport", "${variant.applicationId}.autocomplete.airport"
     variant.resValue "string", "authority_autocomplete_suggestions", "${variant.applicationId}.suggestions"
     variant.resValue "string", "authority_account_sync", "${variant.applicationId}.account.sync"
+
+    def launcherName = GradleUtil.getAppName(project, variant)
+    if (!GradleUtil.isDefined(launcherName)) {
+        // Must be a release build, so we default to app_name
+        launcherName = "@string/app_name"
+    }
+    variant.resValue "string", "launcher_name", "${launcherName}"
 }
