Revert "Update gradle"

--- a/project/build.gradle
+++ b/project/build.gradle
@@ -8,6 +8,7 @@ def CRASHLYTICS_BETA_GROUPS_PATH = "buildbot/crashlytics_beta_groups.txt"
 
 apply plugin: 'com.android.application'
 apply plugin: 'crashlytics'
+apply plugin: AndroidExpediaPlugin
 apply plugin: 'checkstyle'
 
 repositories {
@@ -59,11 +60,10 @@ android {
     }
 
     defaultConfig {
-        versionCode 1
-        versionName "undefined"
-
+        versionCode 41
+        versionName "4.2"
         minSdkVersion 15
-        targetSdkVersion 21
+        targetSdkVersion 19
 
         testApplicationId "com.expedia.bookings.test"
         testInstrumentationRunner "com.google.android.apps.common.testing.testrunner.GoogleInstrumentationTestRunner"
@@ -87,8 +87,6 @@ android {
             buildConfigField "boolean", "IS_EXPEDIA", "true"
             buildConfigField "String", "MEDIA_URL", "\"http://media.expedia.com\""
             applicationId "com.expedia.bookings"
-            versionCode 41
-            versionName "4.2"
         }
 
         voyages {
@@ -136,13 +134,13 @@ android {
         debug {
             applicationIdSuffix ".debug"
 
-            minifyEnabled false
+            runProguard false
             proguardFile 'proguard.cfg'
         }
 
         latest.initWith(buildTypes.debug)
         latest {
-            minifyEnabled shouldRunProguard
+            runProguard shouldRunProguard
 
             applicationIdSuffix ".latest"
 
@@ -152,7 +150,7 @@ android {
 
         feature.initWith(buildTypes.debug)
         feature {
-            minifyEnabled shouldRunProguard
+            runProguard shouldRunProguard
 
             applicationIdSuffix (".feature." + featureName)
 
@@ -161,7 +159,7 @@ android {
         }
 
         release {
-            minifyEnabled true
+            runProguard true
             proguardFile 'proguard.cfg'
         }
     }
@@ -227,33 +225,4 @@ android {
         classpath = files()
         ignoreFailures = true
     }
-}
-
-
-def releaseAccountTokens = [
-    'com.expedia.bookings' : 'expedia.tuid',
-    'com.expedia.bookings.vsc' : 'vsc.tuid',
-    'com.travelocity.android' : 'travelocity.tuid',
-]
-
-android.applicationVariants.all { variant ->
-    // We released apps with the following tokens so we should maintain them so people don't get logged out
-    def token = releaseAccountTokens[variant.applicationId]
-    if (!GradleUtil.isDefined(token)) {
-        token = "${variant.applicationId}.tuid"
-    }
-    variant.resValue "string", "expedia_account_token_type_tuid_identifier", "${token}"
-    variant.resValue "string", "expedia_account_type_identifier", "${variant.applicationId}"
-
-    variant.resValue "string", "authority_autocomplete_hotel", "${variant.applicationId}.autocomplete.hotel"
-    variant.resValue "string", "authority_autocomplete_airport", "${variant.applicationId}.autocomplete.airport"
-    variant.resValue "string", "authority_autocomplete_suggestions", "${variant.applicationId}.suggestions"
-    variant.resValue "string", "authority_account_sync", "${variant.applicationId}.account.sync"
-
-    def launcherName = GradleUtil.getAppName(project, variant)
-    if (!GradleUtil.isDefined(launcherName)) {
-        // Must be a release build, so we default to app_name
-        launcherName = "@string/app_name"
-    }
-    variant.resValue "string", "launcher_name", "${launcherName}"
 }
