--- a/project/src/expedia/AndroidManifest.xml
+++ b/project/src/expedia/AndroidManifest.xml
@@ -112,7 +112,7 @@
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
 
-                <category android:name="${applicationId}.gcm" />
+                <category android:name="com.expedia.bookings.gcm" />
             </intent-filter>
         </receiver>
         <service android:name="com.leanplum.LeanplumPushService" />
