--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,11 @@
 
 buildscript {
     repositories {
-      maven { url 'http://download.crashlytics.com/maven' }
-      mavenCentral()
+        maven { url 'https://maven.fabric.io/public' }
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.crashlytics.tools.gradle:crashlytics-gradle:1.+'
+        classpath 'io.fabric.tools:gradle:1.+'
         classpath 'com.android.tools.build:gradle:1.0.0-rc2'
     }
 }
