--- a/project/build.gradle
+++ b/project/build.gradle
@@ -50,6 +50,8 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
 
+    testBuildType "latest"
+
     lintOptions {
         checkReleaseBuilds false
         showAll true
@@ -151,6 +153,7 @@ android {
 
     sourceSets {
         latest {
+            manifest.srcFile 'src/debug/AndroidManifest.xml'
             java.srcDirs = ['src/debug/java']
         }
 
