Proguard now works for test apk
- Turn off optimizations, dex does the important ones anyways. We still
  strip unused classes
- Keep some more classes because the test code depends on it, not a long
  term solution
- Keep all of the leanplum and crashlytics sdks

--- a/project/proguard.cfg
+++ b/project/proguard.cfg
@@ -1,10 +1,9 @@
--optimizationpasses 10
 -allowaccessmodification
 -dontpreverify
 -dontusemixedcaseclassnames
 -dontskipnonpubliclibraryclasses
 -verbose
--optimizations !code/allocation/variable,!code/simplification/cast,!field/*,!class/merging/*
+-dontoptimize
 -dontobfuscate
 -dontwarn
 
@@ -91,4 +90,29 @@
 -keepclassmembers class ** {
 	@com.squareup.otto.Subscribe public *;
 	@com.squareup.otto.Produce public *;
+}
+
+# Keep all of joda time
+-keep class org.joda.time.** {
+	*;
+}
+
+# Keep all of android util classes
+-keep class com.mobiata.android.** {
+	*;
+}
+
+# Keep leanplum sdk, it is already proguarded
+-keep class com.leanplum.** {
+	*;
+}
+
+# Keep crashlytics sdk, it is already proguarded
+-keep class com.crashlytics.** {
+	*;
+}
+
+# Keep all of okhttp
+-keep class com.squareup.okhttp.** {
+	*;
 }
