--- a/project/build.gradle
+++ b/project/build.gradle
@@ -128,6 +128,7 @@ android {
         latest.initWith(buildTypes.debug)
         latest {
             runProguard shouldRunProguard
+            proguardFile 'proguard.cfg'
 
             applicationIdSuffix ".latest"
 
@@ -138,6 +139,7 @@ android {
         feature.initWith(buildTypes.debug)
         feature {
             runProguard shouldRunProguard
+            proguardFile 'proguard.cfg'
 
             applicationIdSuffix (".feature." + featureName)
 
