Add joda-time to pure Java land
But exclude it in the main app build because AndroidTime satisfies it.
This is just so we can unit test things that depend on JodaTime.

--- a/project/build.gradle
+++ b/project/build.gradle
@@ -30,7 +30,9 @@ dependencies {
     compile project(':lib:ShareEverywhere:shareeverywhere')
     compile project(':lib:AndroidTime')
     // We keep some classes in a pure java project so we can test them with pure jvm unit tests
-    compile project(':lib:ExpediaBookings')
+    compile (project(':lib:ExpediaBookings')) {
+        exclude group: 'joda-time'
+    }
 
     // Google Play Services includes the support lib transitively
     compile "com.google.android.gms:play-services:${rootProject.ext.googlePlayServicesVersion}"
