--- a/project/src/voyages/AndroidManifest.xml
+++ b/project/src/voyages/AndroidManifest.xml
@@ -1,15 +1,64 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" >
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application>
 
+        <!-- AD-X -->
+        <!-- TODO_VSC4.0
+        <meta-data
+            android:name="ADX_CLIENT_ID"
+            android:value="ExpAAGo040914jda"/>
+
+        <meta-data
+            android:name="APP_NAME"
+            android:value="com.vsc.android"/>
+
+        <receiver
+            android:name="com.AdX.tag.AdXAppTracker"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.android.vending.INSTALL_REFERRER"/>
+            </intent-filter>
+        </receiver>
+        -->
+
         <receiver
             android:name="com.expedia.bookings.activity.VSCLocaleChangeReceiver"
-            android:exported="false" >
+            android:exported="false">
             <intent-filter>
                 <action android:name="com.expedia.bookings.action.vsc_locale_changed" />
             </intent-filter>
         </receiver>
 
+        <!-- Deep link routing activity -->
+        <activity
+            android:name="com.expedia.bookings.activity.DeepLinkRouterActivity"
+            android:theme="@android:style/Theme.NoDisplay">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="http" />
+                <data android:host="v.vygs.co" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="vygs" />
+                <data android:host="home" />
+                <data android:host="trips" />
+                <data android:host="showTrips" />
+                <data android:host="hotelSearch" />
+                <data android:host="flightSearch" />
+
+                <!-- We will handle iOS implementation of ItinSharing as well, just cause we can -->
+                <data android:host="addSharedItinerary" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
