--- a/project/build.gradle
+++ b/project/build.gradle
@@ -41,8 +41,9 @@ dependencies {
     compile 'com.google.code.gson:gson:2.3'
     compile 'com.leanplum:Leanplum:1.2.6'
 
-    compile 'io.fabric.sdk.android:fabric:1.0.1'
-    compile 'com.crashlytics.sdk.android:crashlytics:2.0.1@aar'
+    compile ('com.crashlytics.sdk.android:crashlytics:2.0.1@aar') {
+        transitive = true
+    }
 
     androidTestCompile 'com.jakewharton.espresso:espresso:1.1-r3'
     androidTestCompile 'com.squareup.spoon:spoon-client:1.1.1'
