--- a/project/src/voyages/AndroidManifest.xml
+++ b/project/src/voyages/AndroidManifest.xml
@@ -58,6 +58,24 @@
                 <!-- We will handle iOS implementation of ItinSharing as well, just cause we can -->
                 <data android:host="addSharedItinerary" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:pathPrefix="/m/trips/shared"
+                    android:scheme="https"/>
+                <data android:host="agence.voyages-sncf.com" />
+
+                <!-- Integration Server -->
+                <data android:host="expediavoyages-sncf.integration.sb.karmalab.net" />
+
+                <!-- Trunk Server -->
+                <data android:host="expediavoyages-sncf.trunk.sb.karmalab.net" />
+            </intent-filter>
+
         </activity>
     </application>
 
