--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "lib/AndroidTime"]
 	path = lib/AndroidTime
 	url = git@github.com:/ExpediaInc/ewe-android-time.git
+[submodule "lib/mocke3"]
+	path = lib/mocke3
+	url = git@github.com:/ExpediaInc/ewe-mocke3
