Use mocke3 as a dependency in EBAD test project

--- a/project/build.gradle
+++ b/project/build.gradle
@@ -49,6 +49,9 @@ dependencies {
     androidTestCompile('com.squareup.okhttp:mockwebserver:2.0.0') {
         exclude group: 'com.squareup.okhttp'
     }
+    androidTestCompile (project(':lib:mocke3:mocke3')) {
+        transitive = false
+    }
 }
 
 android {
