--- a/settings.gradle
+++ b/settings.gradle
@@ -10,3 +10,4 @@ include ':lib:Utils'
 include ':lib:ShareEverywhere:shareeverywhere'
 include ':lib:AndroidTime'
 include ':lib:ExpediaBookings'
+include ':lib:mocke3:mocke3'
