--- a/project/build.gradle
+++ b/project/build.gradle
@@ -35,8 +35,10 @@ dependencies {
 
     // Google Play Services deps on the support lib
     // however we add it here so the android-sdk-manager plugin bahaves
-    compile "com.google.android.gms:play-services:${rootProject.ext.googlePlayServicesVersion}"
     compile "com.android.support:support-v4:${rootProject.ext.supportLibVersion}"
+    compile "com.google.android.gms:play-services-maps:${rootProject.ext.googlePlayServicesVersion}"
+    compile "com.google.android.gms:play-services-wallet:${rootProject.ext.googlePlayServicesVersion}"
+    compile "com.google.android.gms:play-services-location:${rootProject.ext.googlePlayServicesVersion}"
 
     compile 'com.squareup.okhttp:okhttp:2.0.0'
     compile 'com.squareup:otto:1.3.4'
