Consolidate `MockWebServer` implementation
- Uses the implementation in the mocke3 submodule
- Remove responses
- Update tests for different mock data

--- a/project/build.gradle
+++ b/project/build.gradle
@@ -177,6 +177,10 @@ android {
             java.srcDirs = ['src/debug/java']
         }
 
+        androidTest {
+            assets.srcDirs = ['src/androidTest/assets', '../lib/mocke3/templates']
+        }
+
         feature {
             java.srcDirs = ['src/debug/java']
         }
