3719: Enable proguard on snap

--- a/project/build.gradle
+++ b/project/build.gradle
@@ -223,10 +223,16 @@ public class GradleUtil {
 
     static def shouldEnableProguard(Project project) {
         def buildNumber = "${System.env.BUILD_NUMBER}"
+        def ci = "${System.env.CI}"
         def boolean shouldRunProguard = false
 
         // If BUILD_NUMBER defined turn on proguard
         if (isDefined(buildNumber)) {
+            shouldRunProguard = true
+        }
+
+        // If CI defined turn on proguard
+        if (isDefined(ci)) {
             shouldRunProguard = true
         }
 
