--- a/project/build.gradle
+++ b/project/build.gradle
@@ -67,6 +67,7 @@ android {
     lintOptions {
         checkReleaseBuilds false
         showAll true
+        lintConfig file("lint.xml")
     }
 
     packagingOptions {
