3732: Generate jacoco report for pure Java library
Also improve some test coverage of the code.

--- a/lib/ExpediaBookings/build.gradle
+++ b/lib/ExpediaBookings/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'jacoco'
 
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
@@ -12,3 +13,10 @@ dependencies {
     testCompile 'junit:junit:4.11'
 }
 
+jacocoTestReport {
+    reports {
+        xml.enabled false
+        csv.enabled false
+        html.destination "${buildDir}/jacocoHtml"
+    }
+}
