--- a/project/build.gradle
+++ b/project/build.gradle
@@ -5,6 +5,7 @@ def gitRev = GradleUtil.getGitRevision()
 def CHANGELOG_PATH = "changelog.txt"
 def CRASHLYTICS_BETA_GROUPS_PATH = "buildbot/crashlytics_beta_groups.txt"
 
+apply plugin: 'android-sdk-manager'
 apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
 apply plugin: 'checkstyle'
@@ -32,8 +33,10 @@ dependencies {
         exclude group: 'joda-time'
     }
 
-    // Google Play Services includes the support lib transitively
-    compile "com.google.android.gms:play-services:${rootProject.ext.googlePlayServicesVersion}"
+    // Google Play Services deps on the support lib
+    // however we add it here so the android-sdk-manager plugin bahaves
+    compile 'com.google.android.gms:play-services:${rootProject.ext.googlePlayServicesVersion}'
+    compile 'com.android.support:support-v4:${rootProject.ext.supportLibVersion}'
 
     compile 'com.squareup.okhttp:okhttp:2.0.0'
     compile 'com.squareup:otto:1.3.4'
