--- a/project/build.gradle
+++ b/project/build.gradle
@@ -22,7 +22,6 @@ dependencies {
             'admsAppLibrary-3.0.5.jar',
             'adxtag3.2.6.jar',
     ])
-    compile project(':lib:FacebookSdk:facebook')
     compile project(':lib:FlightLib')
     compile project(':lib:svg-android:svgandroid')
     compile project(':lib:Utils')
@@ -47,6 +46,7 @@ dependencies {
     compile 'com.squareup:otto:1.3.4'
     compile 'com.google.code.gson:gson:2.3'
     compile 'com.leanplum:Leanplum:1.2.7'
+    compile 'com.facebook.android:facebook-android-sdk:3.21.1'
 
     compile ('com.crashlytics.sdk.android:crashlytics:2.2.0@aar') {
         transitive = true
