3757: Hotel details ETP (pay later) info - pay later info banner appears on hotel details screen when there is an ETP offer associated with the property - clicking banner leads to pay later info screen

--- a/project/src/main/AndroidManifest.xml
+++ b/project/src/main/AndroidManifest.xml
@@ -161,6 +161,9 @@
             android:name="com.expedia.bookings.activity.UserReviewsListActivity"
             android:theme="@style/Theme.Phone" />
         <activity
+            android:name="com.expedia.bookings.activity.PayLaterInfoFragmentActivity"
+            android:theme="@style/Theme.Phone" />
+        <activity
             android:name="com.expedia.bookings.activity.RoomsAndRatesListActivity"
             android:theme="@style/Theme.Phone" />
         <activity
