--- a/project/src/debug/AndroidManifest.xml
+++ b/project/src/debug/AndroidManifest.xml
@@ -4,4 +4,8 @@
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD"/>
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
+    <application>
+        <activity android:name="com.expedia.bookings.activity.PlaygroundActivity" />
+    </application>
+
 </manifest>
