--- a/project/build.gradle
+++ b/project/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
     compile 'com.squareup:otto:1.3.4'
     compile 'com.google.code.gson:gson:2.3'
+    compile 'com.jakewharton:butterknife:6.0.0'
     compile 'com.leanplum:Leanplum:1.2.7'
     compile 'com.facebook.android:facebook-android-sdk:3.21.1'
     compile 'com.android.support:support-annotations:20.0.0'
