--- a/lib/ExpediaBookings/build.gradle
+++ b/lib/ExpediaBookings/build.gradle
@@ -10,7 +10,9 @@ repositories {
 
 dependencies {
     compile 'joda-time:joda-time:2.5'
+    compile 'com.squareup.retrofit:retrofit:1.8.0'
     testCompile 'junit:junit:4.11'
+    testCompile 'org.json:json:20140107'
 }
 
 jacocoTestReport {
