--- a/project/build.gradle
+++ b/project/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.3'
     compile 'com.leanplum:Leanplum:1.2.7'
     compile 'com.facebook.android:facebook-android-sdk:3.21.1'
+    compile 'com.android.support:support-annotations:20.0.0'
 
     compile ('com.crashlytics.sdk.android:crashlytics:2.2.0@aar') {
         transitive = true
