--- a/project/build.gradle
+++ b/project/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     // Google Play Services deps on the support lib
     // however we add it here so the android-sdk-manager plugin bahaves
     compile "com.android.support:support-v4:${rootProject.ext.supportLibVersion}"
+    compile "com.android.support:palette-v7:${rootProject.ext.supportLibVersion}"
+
     compile "com.google.android.gms:play-services-maps:${rootProject.ext.googlePlayServicesVersion}"
     compile "com.google.android.gms:play-services-wallet:${rootProject.ext.googlePlayServicesVersion}"
     compile "com.google.android.gms:play-services-location:${rootProject.ext.googlePlayServicesVersion}"
@@ -41,7 +43,6 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.4.0'
     compile 'com.squareup.okhttp:okhttp:2.0.0'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
-    compile 'com.android.support:palette-v7:21.0.+'
     compile 'com.squareup:otto:1.3.4'
     compile 'com.google.code.gson:gson:2.3'
     compile 'com.leanplum:Leanplum:1.2.7'
