--- a/project/build.gradle
+++ b/project/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     // however we add it here so the android-sdk-manager plugin behaves
     compile "com.android.support:support-v4:${rootProject.ext.supportLibVersion}"
     compile "com.android.support:palette-v7:${rootProject.ext.supportLibVersion}"
+    compile "com.android.support:recyclerview-v7:${rootProject.ext.supportLibVersion}"
 
     compile "com.google.android.gms:play-services-maps:${rootProject.ext.googlePlayServicesVersion}"
     compile "com.google.android.gms:play-services-wallet:${rootProject.ext.googlePlayServicesVersion}"
