--- a/lib/ExpediaBookings/build.gradle
+++ b/lib/ExpediaBookings/build.gradle
@@ -13,7 +13,7 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp:2.2.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.okio:okio:1.2.0'
-
+    compile 'io.reactivex:rxandroid:0.24.0'
     testCompile 'com.squareup.okhttp:mockwebserver:2.0.0'
     testCompile 'junit:junit:4.11'
     testCompile 'org.json:json:20140107'
