--- a/project/src/debug/AndroidManifest.xml
+++ b/project/src/debug/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <application>
         <activity
             android:name="com.expedia.bookings.activity.PlaygroundActivity"
+            android:taskAffinity="com.expedia.bookings.activity.PlaygroundActivity"
             android:label="Playground">
 
             <intent-filter>
