--- a/lib/ExpediaBookings/build.gradle
+++ b/lib/ExpediaBookings/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'java'
 apply plugin: 'jacoco'
+apply plugin: 'checkstyle'
 
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
@@ -29,4 +30,10 @@ jacocoTestReport {
         csv.enabled false
         html.destination "${buildDir}/jacocoHtml"
     }
+}
+
+checkstyle {
+    toolVersion = '6.2'
+    ignoreFailures = false
+    configFile = rootProject.file('project/checkstyle.xml')
 }
