Do androids dream of electric sheep?
- Configure a separate robolectric gradle module that depends on our
  main app module
- Port android unit tests over to robolectric
- Delete buildbot script that ran android unit tests
- Provide new buildbot script to run robolectric tests
- Provide new snap script to run robolectric tests
- Checkstyle the robolectric module

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,7 @@
-// Main app
+// Main projects
+include ':lib:ExpediaBookings'
 include ':project'
+include ':robolectric'
 
 // libraries, order does not matter
 // Order matters in the dependencies block of individual projects
@@ -8,5 +10,4 @@ include ':lib:FlightLib'
 include ':lib:Utils'
 include ':lib:ShareEverywhere:shareeverywhere'
 include ':lib:AndroidTime'
-include ':lib:ExpediaBookings'
 include ':lib:mocke3:mocke3'
