--- a/project/src/debug/AndroidManifest.xml
+++ b/project/src/debug/AndroidManifest.xml
@@ -8,7 +8,8 @@
         <activity
             android:name="com.expedia.bookings.activity.PlaygroundActivity"
             android:taskAffinity="com.expedia.bookings.activity.PlaygroundActivity"
-            android:label="Playground">
+            android:label="Playground"
+            android:theme="@style/V2.Theme.Cars" >
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,7 +20,8 @@
         <activity
             android:name="com.expedia.bookings.activity.CarsActivity"
             android:taskAffinity="com.expedia.bookings.activity.CarsActivity"
-            android:label="Cars">
+            android:label="Cars"
+            android:theme="@style/V2.Theme.Cars" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
