Improve building of RCs
Add proper release build support with gradle. Supports the
jarsigner and zipalign tasks. Build like so:

	$ ./gradlew clean assembleExpediaRelease

Requires defining a `~/.gradle/gradle.properties` file with a few
entries that the signingConfig.release refers to.

http://stackoverflow.com/questions/18328730/how-to-create-a-release-signed-apk-file-using-gradle

--- a/project/build.gradle
+++ b/project/build.gradle
@@ -92,6 +92,13 @@ android {
         debug {
             storeFile file("../common/debug.keystore")
         }
+
+        release {
+            storeFile file(GradleUtil.getPropertyWithDefault(project, "RELEASE_STORE_FILE", "."))
+            storePassword GradleUtil.getPropertyWithDefault(project, "RELEASE_STORE_PASSWORD", "")
+            keyAlias GradleUtil.getPropertyWithDefault(project, "RELEASE_KEY_ALIAS", "")
+            keyPassword GradleUtil.getPropertyWithDefault(project, "RELEASE_KEY_PASSWORD", "")
+        }
     }
 
     defaultConfig {
@@ -166,6 +173,8 @@ android {
         release {
             minifyEnabled true
             proguardFile file('proguard.cfg')
+            zipAlignEnabled true
+            signingConfig signingConfigs.release
         }
     }
 
