Move Money, ValidPayment, CreditCardType to lib/ExpediaBookings
This sets the stage for using default gson parsing of Money, ValidPayment and
CreditCardType for the car create trip API. This refactor necessitated the following:

1. Move data classes to lib/ExpediaBookings
2. Move Android-specific code into project utility methods
3. Replace JSONable.fromJson/toJson implementations of the above classes to use
new GsonUtil methods.
4. GsonUtil + unit tests

--- a/lib/ExpediaBookings/build.gradle
+++ b/lib/ExpediaBookings/build.gradle
@@ -15,10 +15,10 @@ dependencies {
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.okio:okio:1.2.0'
     compile 'io.reactivex:rxjava:1.0.4'
+    compile 'org.json:json:20140107'
 
     testCompile 'com.squareup.okhttp:mockwebserver:2.2.0'
     testCompile 'junit:junit:4.11'
-    testCompile 'org.json:json:20140107'
     testCompile (project(':lib:mocke3:mocke3')) {
         transitive = false
     }
