--- a/project/build.gradle
+++ b/project/build.gradle
@@ -126,29 +126,46 @@ android {
         expedia {
             buildConfigField "String", "MEDIA_URL", "\"http://media.expedia.com\""
             applicationId "com.expedia.bookings"
-            versionCode 45
-            versionName "4.4"
+            
+            def major = 4
+            def minor = 5
+            def patch = 0
+            def build = 0
+            versionCode GradleUtil.versionCode(major, minor, patch, build)
+            versionName GradleUtil.versionName(major, minor, patch, build)
         }
 
         voyages {
             buildConfigField "String", "MEDIA_URL", "\"http://media.expedia.com\""
             applicationId "com.expedia.bookings.vsc"
-            versionCode 1
-            versionName "1.0"
+            def major = 1
+            def minor = 0
+            def patch = 0
+            def build = 0
+            versionCode GradleUtil.versionCode(major, minor, patch, build)
+            versionName GradleUtil.versionName(major, minor, patch, build)
         }
 
         travelocity {
             buildConfigField "String", "MEDIA_URL", "\"http://images.trvl-media.com\""
             applicationId "com.travelocity.android"
-            versionCode 1003
-            versionName "6.2-${versionCode}"
+            def major = 6
+            def minor = 2
+            def patch = 0
+            def build = 0
+            versionCode GradleUtil.versionCode(major, minor, patch, build)
+            versionName GradleUtil.versionName(major, minor, patch, build)
         }
 
         airAsiaGo {
             buildConfigField "String", "MEDIA_URL", "\"http://media.expedia.com\""
             applicationId "com.airasiago.android"
-            versionCode 2
-            versionName "2.0"
+            def major = 2
+            def minor = 0
+            def patch = 0
+            def build = 0
+            versionCode GradleUtil.versionCode(major, minor, patch, build)
+            versionName GradleUtil.versionName(major, minor, patch, build)
         }
     }
 
@@ -270,6 +287,18 @@ public class GradleUtil {
             hash = "!" + hash
         }
         return hash
+    }
+
+    static def versionCode(major, minor, patch, build) {
+        return major * 1000000 + minor * 10000 + patch * 100 + build
+    }
+
+    static def versionName(major, minor, patch, build) {
+        def name = "${major}.${minor}.${patch}"
+        if (build > 0) {
+            name = "${name} - ${build}"
+        }
+        return name
     }
 }
 
