Update buildbot scripts to build something other than latest
(cherry picked from commit e7dfd49b12b9889d08c15a287824c083dc516111)

--- a/project/build.gradle
+++ b/project/build.gradle
@@ -271,7 +271,8 @@ public class GradleUtil {
         }
         type = type.capitalize()
 
-        return flavor + " " + type
+        def appname = flavor + " " + type
+        return appname.tr('_', '.')
     }
 
     static def getGitRevision() {
