--- a/project/build.gradle
+++ b/project/build.gradle
@@ -266,7 +266,8 @@ public class GradleUtil {
         }
         type = type.capitalize()
 
-        return flavor + " " + type
+        def appname = flavor + " " + type
+        return appname.tr('_', '.')
     }
 
     static def getGitRevision() {
