Add initial Search widget for LX. Test it.

--- a/project/src/debug/AndroidManifest.xml
+++ b/project/src/debug/AndroidManifest.xml
@@ -27,6 +27,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="com.expedia.bookings.activity.LXBaseActivity"
+            android:taskAffinity="com.expedia.bookings.activity.LXBaseActivity"
+            android:label="LX Activities"
+            android:theme="@style/V2.Theme.LX">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
     </application>
 
 </manifest>
