--- a/project/build.gradle
+++ b/project/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:3.21.1'
     compile 'com.android.support:support-annotations:20.0.0'
     compile 'io.reactivex:rxandroid:0.24.0'
+    compile 'com.wefika:flowlayout:0.4.0'
 
     compile ('com.crashlytics.sdk.android:crashlytics:2.2.0@aar') {
         transitive = true
