--- a/project/src/debug/AndroidManifest.xml
+++ b/project/src/debug/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity
             android:name="com.expedia.bookings.activity.CarsActivity"
             android:taskAffinity="com.expedia.bookings.activity.CarsActivity"
+            android:screenOrientation="portrait"
             android:label="Cars"
             android:theme="@style/V2.Theme.Cars" >
             <intent-filter>
