--- a/project/build.gradle
+++ b/project/build.gradle
@@ -83,7 +83,9 @@ dependencies {
         exclude group: 'com.android.support'
         exclude group: 'javax.inject'
     }
-    androidTestCompile 'com.squareup.spoon:spoon-client:1.1.1'
+    androidTestCompile fileTree(dir: 'libs', include: [
+            'spoon-client-1.1.3-EXP.jar',
+    ])
     androidTestCompile('com.squareup.okhttp:mockwebserver:2.1.0') {
         exclude group: 'com.squareup.okhttp'
     }
