s/car fixing pre lollipop ui issues

--- a/project/src/main/AndroidManifest.xml
+++ b/project/src/main/AndroidManifest.xml
@@ -253,7 +253,8 @@
             android:taskAffinity="com.expedia.bookings.activity.CarActivity"
             android:screenOrientation="portrait"
             android:label="Cars"
-            android:theme="@style/V2.Theme.Cars" >
+            android:theme="@style/V2.Theme.Cars"
+            android:windowSoftInputMode="adjustNothing">
         </activity>
 
         <!-- About/Preferences/WebView activities -->
