Fix stetho on proguarded builds

--- a/project/proguard.cfg
+++ b/project/proguard.cfg
@@ -116,3 +116,8 @@
 -keep class retrofit.** {
     *;
 }
+
+# Keep stetho. Release builds don't build the code in at all so this is safe
+-keep class com.facebook.stetho.** {
+	*;
+}
