--- a/settings.gradle
+++ b/settings.gradle
@@ -10,4 +10,4 @@ include ':lib:FlightLib'
 include ':lib:Utils'
 include ':lib:ShareEverywhere:shareeverywhere'
 include ':lib:AndroidTime'
-include ':lib:mocke3:mocke3'
+include ':lib:mocked:mocke3'
