--- a/project/build.gradle
+++ b/project/build.gradle
@@ -21,6 +21,7 @@ dependencies {
             'activeandroid-20131111.jar',
             'admsAppLibrary-3.0.5.jar',
             'adxtag3.2.6.jar',
+            'Kahuna.jar',
     ])
     compile project(':lib:FlightLib')
     compile project(':lib:svg-android:svgandroid')
