--- a/project/src/expedia/AndroidManifest.xml
+++ b/project/src/expedia/AndroidManifest.xml
@@ -120,6 +120,21 @@
         </receiver>
         <service android:name="com.leanplum.LeanplumPushService" />
 
+        <!--Push Notifications for kahuna sdk -->
+        <receiver android:name="com.kahuna.sdk.KahunaCoreReceiver" />
+        <receiver
+            android:name="com.kahuna.sdk.KahunaPushReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+
+                <category android:name="${applicationId}" />
+            </intent-filter>
+        </receiver>
+
+        <service android:name="com.kahuna.sdk.KahunaPushService" />
+
 
     </application>
 
