--- a/project/build.gradle
+++ b/project/build.gradle
@@ -192,6 +192,17 @@ android {
             versionCode GradleUtil.versionCode(major, minor, patch, build)
             versionName GradleUtil.versionName(major, minor, patch, build)
         }
+
+        wotif {
+            buildConfigField "String", "MEDIA_URL", "\"http://media.expedia.com\""
+            applicationId "com.wotif.android"
+            def major = 2
+            def minor = 0
+            def patch = 0
+            def build = 0
+            versionCode GradleUtil.versionCode(major, minor, patch, build)
+            versionName GradleUtil.versionName(major, minor, patch, build)
+        }
     }
 
     buildTypes {
